# openswe1r

./: .gitignore  .gitmodules  Application.cpp  Application.hpp  CMakeLists.txt  Game.cpp  Game.hpp  README.md  StarWars.cpp  StarWars.hpp  appveyor.yml  common.cpp  common.h  descriptor.h  emulation.c  emulation.cpp  emulation.h  exe.cpp  exe.h  export.cpp  export.h  main.c  main.cpp  main.h  ms_windows.h  shader.cpp  shader.h  windows.h
.travis/macos/: install.sh
.travis/ubuntu/: docker.sh
com/: a3d.c  a3d.cpp  a3d.h  d3d.cpp  d3d.h  ddraw.cpp  ddraw.h  dinput.c  dinput.cpp  dinput.h  dplay.cpp
dll/: advapi32.cpp  gdi32.cpp  kernel32.c  kernel32.cpp  ole32.cpp  smush.c  user32.cpp
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
imgui/: imconfig.h  imgui_impl_opengl3.cpp
